# modelscope

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-config_local.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  Cip  Dockerfile  LICENSE  MANIFEST.in  Makefile  Makefile.docker  README.md  README_ja.md  README_zh.md  SECURITY.md  download_test.py  kernels  main.py  modelscope.mcp.client  modelscope.utils.cv.image_utils  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  test_4k.py  test_my.py  test_nerf_recon_4k.py  train.sh  tst_train.py  video_pipeline.py
.dev_scripts/: build_base_image.sh  build_docs.sh  build_image.py  build_image.sh  ci_container_test.sh  citest.sh  dockerci.sh  linter.sh  run_docker.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: auto_approve.yml  citest.yaml  close_stale_issue.yml  daily_regression.yaml  debug.yaml  docker-image.yml  lint.yaml  publish.yaml  release.yaml
configs/: README.md
configs/cv/: configuration.json
configs/examples/: config.py  configuration.json  configuration.py  configuration.yaml  plain_args.yaml  train.json
configs/multi_modal/: base.yaml  exp06_text_depths_vs_style.yaml
configs/nlp/: sbert_sentence_similarity.json  sequence_classification_trainer.yaml
damo_4knerf/: configuration.json
docker/: .dockerignore  Dockerfile.amd  Dockerfile.ascend  Dockerfile.extra_install  Dockerfile.paddle_extra_install  Dockerfile.ubuntu  Dockerfile.ubuntu.old  Dockerfile.ubuntu_base  Dockerfile.ubuntu_paddle  Dockerfile.ubuntu_paddle_gpu  OVERVIEW.ascend.md  OVERVIEW.ascend.zh.md  build_image.py  install.sh  install_ascend.sh  install_cpu.sh  meta.sh  meta_ms.sh  pytorch.dockerfile
docker/rcfiles/: conda.aliyun  conda.tuna  pip.conf.tsinghua  sources.list.aliyun  ubuntu20.04_sources.tuna  ubuntu2204.aliyun
docker/scripts/: install_apex.sh  install_colmap.sh  install_flash_attension.sh  install_libs.sh  install_pytorch3d_nvdiffrast.sh  install_tiny_cuda_nn.sh  install_unifold.sh  modelscope_env_init.sh  torch111_torch3d_nvdiffrast.sh
docs/: Makefile  README.md
docs/source/: change_log.md  command.md  conf.py  develop.md  develop_cn.md  faq.md  index.rst  quick_start.md  server.md
examples/mcp/: mcp_api.py  mcp_local.py
examples/pytorch/: DiT_ImageNet_Demo.ipynb  FILE_TRANSFER.md  SiT_ImageNet_Demo.ipynb  ViViT-demo.ipynb  finetune_image_classification.py  run_DiT_Demo.ipynb  run_train.sh
maas_lib/: __init__.py
maas_lib/fileio/: __init__.py  file.py  io.py
maas_lib/models/: __init__.py  base.py  builder.py
maas_lib/pipelines/: __init__.py  base.py  builder.py  default.py  util.py
maas_lib/pipelines/cv/ocr_utils/cpp/: CMakeLists.txt  clip_rboxes_op.cc  combine_segments_filter_op.cc  combine_segments_op.cc  detection_mask_op.cc  polygons_to_rboxes_op.cc  project_polygons_op.cc  utilities.h
maas_lib/preprocessors/: __init__.py  builder.py  image.py  nlp.py
maas_lib/pydatasets/: py_dataset.py
maas_lib/tools/: eval.py  train.py
maas_lib/trainers/: base.py  builder.py
maas_lib/utils/: constant.py  logger.py  registry.py
modelscope/: __init__.py  metainfo.py  outputs.py  pipeline_inputs.py  version.py
modelscope/cli/: agent.py  aigc.py  base.py  clearcache.py  cli.py  create.py  download.py  llamafile.py  login.py  modelcard.py  pipeline.py  plugins.py  scancache.py  server.py  skills.py  studio.py  upload.py  utils.py
modelscope/datasets/: ms_dataset.py
modelscope/exporters/: __init__.py  base.py  builder.py  tf_model_exporter.py  torch_model_exporter.py
modelscope/fileio/: __init__.py  file.py  io.py
modelscope/hub/: __init__.py  api.py  cache_manager.py  callback.py  check_model.py  commit_scheduler.py  constants.py  create_model.py  dataset_download.py  deploy.py  errors.py  file_download.py  (+13 more)
pydatasets/: py_dataset.py
requirements/: agent.txt  audio.txt  cv.txt  datasets.txt  docs.txt  framework.txt  hub.txt  maas.txt  multi-modal.txt  nlp.txt  pipeline.txt  runtime.txt  science.txt  server.txt  svr.txt  tensorflow1x.txt  tests.txt
tests/: isolated_cases.txt  json_call_test.py  run.py  run_analysis.py  run_config.yaml
tools/: convert_ckpt.py  convert_megatron_ckpt.py  convert_megatron_ckpt.sh  weight_diff.py
(+4255 files in other folders)
